Finished chapter 4, first draft of static model results

--- a/templates/appa.tex
+++ b/templates/appa.tex
@@ -1,5 +1,16 @@
-\chapter{Appendix A}\label{app:a}
+\chapter{Appendix A: Exploration}
+\label{app:a}
 
-\section{ArcGIS Documentation}
+\section{Script 1: Data Prep}
 
-\section{Python Script Documentation}
+\section{Script 2: }
+
+\section{Script 3: }
+
+\section{Script 4: }
+
+\section{Script 5: }
+
+\section{Script 6: }
+
+\section{Script 7: }
