--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -47,6 +47,7 @@
 \newacronym{ovr}{OvR}{One versus Rest}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
 \newacronym{pca}{PCA}{Principle Component Analysis}
+\newacronym{pdf}{PDF}{Probability Density Function}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
 \newacronym{ppa}{PPA}{Power Purchase Agreement}
 \newacronym{relu}{ReLU}{Rectified Linear Unit}
